--- a/style.scss
+++ b/style.scss
@@ -70,6 +70,14 @@ body {
     counter-reset: sidenote-counter;
 }
 
+/* Adds dark mode */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #151515;
+        color: #ddd;
+    }
+}
+
 h1 {
     font-weight: 400;
     margin-top: 4rem;
@@ -245,6 +253,7 @@ img {
     margin: 0 auto;
   }
 }
+
 .site-name {
   margin: 0;
   color: $darkGray;
@@ -294,6 +303,13 @@ a:link, .tufte-underline, .hover-tufte-underline:hover {
     }
 }
 
+/* Adds dark mode */
+@media (prefers-color-scheme: dark) {
+    a:link, .tufte-underline, .hover-tufte-underline:hover {
+        text-shadow: 0.03em 0 #151515, -0.03em 0 #151515, 0 0.03em #151515, 0 -0.03em #151515, 0.06em 0 #151515, -0.06em 0 #151515, 0.09em 0 #151515, -0.09em 0 #151515, 0.12em 0 #151515, -0.12em 0 #151515, 0.15em 0 #151515, -0.15em 0 #151515;
+    }
+}
+
 a:link::selection,
 a:link::-moz-selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
@@ -329,6 +345,10 @@ nav {
 
     @media screen and (-webkit-min-device-pixel-ratio: 0) {
       background-position-y: 87%, 87%, 87%;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      text-shadow: 0.03em 0 #151515, -0.03em 0 #151515, 0 0.03em #151515, 0 -0.03em #151515, 0.06em 0 #151515, -0.06em 0 #151515, 0.09em 0 #151515, -0.09em 0 #151515, 0.12em 0 #151515, -0.12em 0 #151515, 0.15em 0 #151515, -0.15em 0 #151515;
     }
 
     &::selection,
