--- a/style.scss
+++ b/style.scss
@@ -328,9 +328,20 @@ nav {
     background-position: 0% 93%, 100% 93%, 0% 93%;
     text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
 
-    @media screen and (-webkit-min-device-pixel-ratio: 0) {
-      background-position-y: 87%, 87%, 87%;
+    --main-width: 745px;
+    
+    @media screen and (min-width: calc(745px + 2 * (52px + 206px + 52px))) {
+      header,
+      main,
+      footer {
+        max-width: var(--main-width);
+        margin-left: auto;
+        margin-right: auto;
+      }
     }
+    // @media screen and (-webkit-min-device-pixel-ratio: 0) {
+    //   background-position-y: 87%, 87%, 87%;
+    // }
 
     &::selection,
     &::-moz-selection {
