--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
-            <p><a href="{{myurl}}/about">About</a></p> 
+            <p><a href="https://www.test.com">About</a></p>
           </div>
 
         </header>
