--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
 	<body>
 		<div class="wrapper-masthead">
 			<div class="container">
-				<a href="{{site.baseurl}}/"><img class="badge" src="https://ChuckGarcian.github.io/images/headshot.jpg" alt="CH"></a>
+				<a href="{{site.baseurl}}/"><img class="badge" src="https://ChuckGarcian.github.io/assets/img/headshot.jpg" alt="CH"></a>
 				<div class="site-info">
 					<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
 					<p class="site-description">{{ site.description }}</p>
