Fix issue with article listings html

--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   {% include head.html %}
   <body class="full-width">
@@ -9,4 +9,4 @@
     {% include print-footer.html %}
     {% include footer.html %}
   </body>
-</html>
+</html> -->
