--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <header class="masthead clearfix">
 	<title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
-
+	
 	<meta charset="utf-8" />
 	<meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -39,6 +39,7 @@
 		<div class="wrapper-masthead">
 			<div class="container">
 				<a href="{{site.baseurl}}/"><img class="badge" src="https://ChuckGarcian.github.io/assets/img/headshot.jpg" alt="CH"></a>
+				<!-- <img src="url_of_your_image" alt="description_of_the_image"> -->
 				<div class="site-info">
 					<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
 					<p class="site-description">{{ site.description }}</p>
