Remove bottom border from masthead in the css file

--- a/css/tufte.scss
+++ b/css/tufte.scss
@@ -111,8 +111,7 @@ $lightGray: #eee;
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-
+  // border-bottom: 1px solid $lightGray;
 }
 
 // Mathjax fonts need TLC
